            - Changed nConstraints from an enum value to a static constexpr int.
            - Simplified the way in which coefficients are stored.  The old
              Coefficients structures are gone, replaced by a new Coefficient
              type alias and a new octAdjustment constant.  Coefficients
              are now stored directly within LPCol via the field LPCol::extra.
            - The verify() routines now take their arguments by reference,
              not by pointer.
        Class LPConstraintEuler, LPConstraintEulerPositive:
            - LPConstraintEuler has been renamed to LPConstraintEulerPositive.
              The old name is kept as a deprecated typedef.
        Class LPConstraintEulerZero:
            - New constraint to use with normal surface enumeration that
              fixes Euler characteristic to be zero.
        Class LPData:
            - Routine reserve() now takes the tableaux by reference.
            - Routine extractSolution() now returns its vector by value,
              instead of using a reference argument.
        Class LPInitialTableaux:
            - The constraintsBroken() routines are gone; instead the class
              constructor throws an exception on error.
        Class LPSystem:
            - New class to translate coordinate systems into a layout
              for LPInitialTableaux.
        Class Manifold:
            - Routines construct() and homology() now return by value, not by
              pointer, and throw exceptions on error instead of returning null.
            - Renamed TeXName() to texName().  The old name is kept but
              deprecated.
        Class MarkedAbelianGroup:
            - New move constructor.
            - New copy assignment and move assignment operators.
            - Added member and global swap() functions.
            - All functions that used to return a std::unique_ptr<X> now
              just return an X by value (which can then be moved from).