@@ -33,3 +33,7 @@ Perm: [3, 4, 5, 0, 1, 2, 6, 7]
 ( 0 1 1 0 1 1 )
 Not feasible
 
+[]
+[[-1, -1, -1, 0, 1, 1, -1, -1, 0, 0, 1, 0, -1, -1, 0, 0, 1, 1, 0, 1, 0, 0, 0, -1, 1, 1, 0, 0, -1]]
+[[-1, -1, -1, 0, 1, 1, -1, -1, 0, 0, 1, 0, -1, -1, 0, 0, 1, 1, 0, 1, 0, 0, 0, -1, 1, 1, 0, 0, -1]]
+
