@@ -661,6 +661,8 @@ Version 7.0  [ TODO ]
               Coefficients structures are gone, replaced by a new Coefficient
               type alias and a new octAdjustment constant.  Coefficients
               are now stored directly within LPCol via the field LPCol::extra.
+            - Changed addRows() to take an initial tableaux instead of a
+              triangulation and column permutation.
             - The verify() routines now take their arguments by reference,
               not by pointer.
         Class LPConstraintEuler, LPConstraintEulerPositive:
